figured out how to add Textview for testing, could not test since fire base isn't allowing cast of task in line 55.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="android.support.design.widget.TabLayout$ScrollingViewBehavior"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/linearlayout">
 
 
     <androidx.viewpager2.widget.ViewPager2
