--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -17,7 +17,7 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/Btn_add_reminder"
             android:layout_gravity="center"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
