added recyclerview for activityTask in hompage. added recyclerview for subactivity (with full functionality) to add activity task added cklickability for add subactivity and time choosers in add activitytask

--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -18,7 +18,7 @@
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
-            android:text="write reminder...."  />
+            android:hint="write reminder...."  />
 
         <Switch
             android:id="@+id/Switch_key_or_bucket"
