--- a/app/src/main/res/layout/fragment_add_reminder.xml
+++ b/app/src/main/res/layout/fragment_add_reminder.xml
@@ -23,7 +23,7 @@
                 android:ems="10"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
-                android:text="write reminder...." />
+                android:hint="write reminder...." />
 
             <Switch
                 android:id="@+id/Switch_AI_enabler"
@@ -75,6 +75,7 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/subRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="150dp">
 
