--- a/app/src/main/res/layout/comments_recycle.xml
+++ b/app/src/main/res/layout/comments_recycle.xml
@@ -9,6 +9,7 @@
     app:layout_behavior="android.support.design.widget.TabLayout$ScrollingViewBehavior">
 
     <LinearLayout
+        android:id="@+id/commentMainLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
