--- a/app/src/main/res/layout/activitytask_recycleview.xml
+++ b/app/src/main/res/layout/activitytask_recycleview.xml
@@ -20,6 +20,7 @@
             android:text="" />
 
         <LinearLayout
+            android:id="@+id/reminderDataLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
