--- a/app/src/main/res/layout/friendsgroup_recycler.xml
+++ b/app/src/main/res/layout/friendsgroup_recycler.xml
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:text="0"
                 android:textColor="@color/black"
