--- a/app/src/main/res/layout/fragment_points_and_groups.xml
+++ b/app/src/main/res/layout/fragment_points_and_groups.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    tools:context=".PointsAndGroups">
+    tools:context=".PointsAndGroups"
+    android:id="@+id/pointsNgroups">
 
     <LinearLayout
         android:layout_width="match_parent"
