--- a/app/src/main/res/layout/activitytask_recycleview.xml
+++ b/app/src/main/res/layout/activitytask_recycleview.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
     app:layout_behavior="android.support.design.widget.TabLayout$ScrollingViewBehavior">
 
     <LinearLayout
