--- a/app/src/main/res/layout/fragment_add_reminder.xml
+++ b/app/src/main/res/layout/fragment_add_reminder.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".AddReminder">
 
     <androidx.constraintlayout.widget.ConstraintLayout
