--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".HomePage"
     android:background="?android:windowBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:id="@+id/Fragment_HomePage">
 
     <LinearLayout
