--- a/app/src/main/res/layout/fragment_add_reminder.xml
+++ b/app/src/main/res/layout/fragment_add_reminder.xml
@@ -134,7 +134,8 @@
                 android:id="@+id/Btn_add_subReminder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add subreminder" />
+                android:textAllCaps="false"
+                android:text="Add SubReminder" />
 
             <LinearLayout
                 android:layout_width="match_parent"
